# star-wars-presentation

./: .gitignore  CLAUDE.md  CMakeLists.txt  CrawlContent.h  CrawlWindow.cpp  CrawlWindow.h  MainWindow.cpp  MainWindow.h  OPERATOR.md  README.md  TextIO.cpp  TextIO.h  main.cpp  next_steps.md  status.md
resources/: resources.qrc  stars.json  text.txt
scripts/: generate_sounds.py
src/: CrawlContent.h  CrawlWindow.cpp  CrawlWindow.h  LineNumberTextEdit.cpp  LineNumberTextEdit.h  MainWindow.cpp  MainWindow.h  StarMapWidget.cpp  StarMapWidget.h  StarsEditorWidget.cpp  StarsEditorWidget.h  TextIO.cpp  TextIO.h
